@@ -16,16 +16,13 @@ namespace SimpleInjector.CodeSamples
     {
         internal static readonly DependencyContext Root = new DependencyContext();
 
-        internal DependencyContext(Type serviceType, Type implementationType,
-            ParameterInfo parameter) {
-            this.ServiceType = serviceType;
+        internal DependencyContext(Type implementationType, ParameterInfo parameter) {
             this.ImplementationType = implementationType;
             this.Parameter = parameter;
         }
 
         private DependencyContext() { }
 
-        public Type ServiceType { get; }
         public Type ImplementationType { get; }
         public ParameterInfo Parameter { get; }
     }
@@ -44,9 +41,9 @@ namespace SimpleInjector.CodeSamples
 
             // Allow the Func<DependencyContext, TService> to be injected into parent types.
             container.ExpressionBuilding += (sender, e) => {
-                if (e.RegisteredServiceType != typeof(TService)) {
+                if (e.KnownImplementationType != typeof(TService)) {
                     var rewriter = new DependencyContextRewriter {
-                        ServiceType = e.RegisteredServiceType,
+                        ImplementationType = e.KnownImplementationType,
                         ContextBasedFactory = contextBasedFactory,
                         RootFactory = rootFactory,
                         Expression = e.Expression
@@ -61,21 +58,10 @@ namespace SimpleInjector.CodeSamples
         {
             private int parameterIndex;
 
-            internal Type ServiceType { get; set; }
             internal object ContextBasedFactory { get; set; }
             internal object RootFactory { get; set; }
             internal Expression Expression { get; set; }
-
-            internal Type ImplementationType {
-                get {
-                    var expression = this.Expression as NewExpression;
-
-                    if (expression == null)
-                        return this.ServiceType;
-                    
-                    return expression.Constructor.DeclaringType;
-                }
-            }
+            internal Type ImplementationType { get; set; }
 
             internal ParameterInfo Parameter {
                 get {
@@ -107,10 +93,7 @@ namespace SimpleInjector.CodeSamples
                 return Expression.Invoke(
                     Expression.Constant(this.ContextBasedFactory),
                     Expression.Constant(
-                        new DependencyContext(
-                            this.ServiceType, 
-                            this.ImplementationType,
-                            this.Parameter)));
+                        new DependencyContext(this.ImplementationType, this.Parameter)));
             }
 
             private bool IsRootedContextBasedFactory(InvocationExpression node) {
