@@ -124,87 +124,6 @@
         }
 
         [TestMethod]
-        public void GetInstance_OnProducerCreatedUsingLifestyleCreateProducer1_ExpressionBuildingGetsSuppliedWithExpectedServiceType()
-        {
-            // Arrange
-            Type expectedRegisteredServiceType = typeof(IPlugin);
-            Type actualRegisteredServiceType = null;
-
-            var container = ContainerFactory.New();
-
-            var producer = Lifestyle.Transient.CreateProducer<IPlugin, PluginImpl>(container);
-
-            container.ExpressionBuilding += (s, e) =>
-            {
-                if (e.KnownImplementationType == typeof(PluginImpl))
-                {
-                    actualRegisteredServiceType = e.RegisteredServiceType;
-                }
-            };
-
-            // Act
-            IPlugin instance = producer.GetInstance();
-
-            // Assert
-            Assert.AreEqual(expectedRegisteredServiceType, actualRegisteredServiceType,
-                "The RegisteredServiceType supplied to the ExpressionBuilding should be IPlugin.");
-        }
-
-        [TestMethod]
-        public void GetInstance_OnProducerCreatedUsingLifestyleCreateProducer2_ExpressionBuildingGetsSuppliedWithExpectedServiceType()
-        {
-            // Arrange
-            Type expectedRegisteredServiceType = typeof(IPlugin);
-            Type actualRegisteredServiceType = null;
-
-            var container = ContainerFactory.New();
-
-            var producer = Lifestyle.Transient.CreateProducer<IPlugin>(() => new PluginImpl(), container);
-
-            container.ExpressionBuilding += (s, e) =>
-            {
-                if (e.KnownImplementationType == typeof(IPlugin))
-                {
-                    actualRegisteredServiceType = e.RegisteredServiceType;
-                }
-            };
-
-            // Act
-            var instance = producer.GetInstance();
-
-            // Assert
-            Assert.AreEqual(expectedRegisteredServiceType, actualRegisteredServiceType,
-                "The RegisteredServiceType supplied to the ExpressionBuilding should be IPlugin.");
-        }
-
-        [TestMethod]
-        public void GetInstance_OnProducerCreatedUsingLifestyleCreateProducer3_ExpressionBuildingGetsSuppliedWithExpectedServiceType()
-        {
-            // Arrange
-            Type expectedRegisteredServiceType = typeof(IPlugin);
-            Type actualRegisteredServiceType = null;
-
-            var container = ContainerFactory.New();
-
-            var producer = Lifestyle.Transient.CreateProducer(typeof(IPlugin), typeof(PluginImpl), container);
-
-            container.ExpressionBuilding += (s, e) =>
-            {
-                if (e.KnownImplementationType == typeof(PluginImpl))
-                {
-                    actualRegisteredServiceType = e.RegisteredServiceType;
-                }
-            };
-
-            // Act
-            var instance = producer.GetInstance();
-
-            // Assert
-            Assert.AreEqual(expectedRegisteredServiceType, actualRegisteredServiceType,
-                "The RegisteredServiceType supplied to the ExpressionBuilding should be IPlugin.");
-        }
-
-        [TestMethod]
         public void CreateRegistrationConcreteGeneric_WithNullArgument1_ThrowsArgumentNullException()
         {
             // Act
